--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 
     <main>
       <div class="catalog">
-        <div class="product" data-qa="card">
+        <div class="product product--1" data-qa="card">
           <img
             class="product__photo"
             src="images/imac.jpeg"
@@ -78,14 +78,16 @@
             Код товара: 195434
           </p>
 
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
 
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
+            <p class="box-review">Отзывов: 5</p>
           </div>
 
           <div class="cost product__price">
@@ -102,7 +104,7 @@
           </a>
         </div>
 
-        <div class="product" data-qa="card">
+        <div class="product product--2" data-qa="card">
           <img
             class="product__photo"
             src="images/imac.jpeg"
@@ -117,14 +119,16 @@
             Код товара: 195434
           </p>
 
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
 
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
+            <p class="box-review">Отзывов: 5</p>
           </div>
 
           <div class="cost product__price">
@@ -141,7 +145,7 @@
           </a>
         </div>
 
-        <div class="product product--1" data-qa="card">
+        <div class="product product--3" data-qa="card">
           <img
             class="product__photo"
             src="images/imac.jpeg"
@@ -156,136 +160,16 @@
             Код товара: 195434
           </p>
 
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
 
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
-          </div>
-
-
-          <div class="cost product__price">
-            <p class="cost__price-words">Цена:</p>
-            <p class="cost__price-number">69 999 грн</p>
-          </div>
-
-          <a
-            class="product__link"
-            href="#"
-            data-qa="hover"
-          >
-            Купить
-          </a>
-        </div>
-
-        <div class="product" data-qa="card">
-          <img
-            class="product__photo"
-            src="images/imac.jpeg"
-            alt="imac photo"
-          >
-
-          <p class="product__text-title">
-            Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
-          </p>
-
-          <p class="product__text-subtitle">
-            Код товара: 195434
-          </p>
-
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
-          </div>
-
-
-          <div class="cost product__price">
-            <p class="cost__price-words">Цена:</p>
-            <p class="cost__price-number">69 999 грн</p>
-          </div>
-
-          <a
-            class="product__link"
-            href="#"
-            data-qa="hover"
-          >
-            Купить
-          </a>
-        </div>
-      </div>
-
-      <div class="catalog">
-        <div class="product" data-qa="card">
-          <img
-            class="product__photo"
-            src="images/imac.jpeg"
-            alt="imac photo"
-          >
-
-          <p class="product__text-title">
-            Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
-          </p>
-
-          <p class="product__text-subtitle">
-            Код товара: 195434
-          </p>
-
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
-          </div>
-
-
-          <div class="cost product__price">
-            <p class="cost__price-words">Цена:</p>
-            <p class="cost__price-number">69 999 грн</p>
-          </div>
-
-          <a
-            class="product__link"
-            href="#"
-            data-qa="hover"
-          >
-            Купить
-          </a>
-        </div>
-
-        <div class="product" data-qa="card">
-          <img
-            class="product__photo"
-            src="images/imac.jpeg"
-            alt="imac photo"
-          >
-
-          <p class="product__text-title">
-            Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
-          </p>
-
-          <p class="product__text-subtitle">
-            Код товара: 195434
-          </p>
-
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
+            <p class="box-review">Отзывов: 5</p>
           </div>
 
           <div class="cost product__price">
@@ -302,7 +186,7 @@
           </a>
         </div>
 
-        <div class="product" data-qa="card">
+        <div class="product product--4" data-qa="card">
           <img
             class="product__photo"
             src="images/imac.jpeg"
@@ -317,14 +201,16 @@
             Код товара: 195434
           </p>
 
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
 
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
+            <p class="box-review">Отзывов: 5</p>
           </div>
 
           <div class="cost product__price">
@@ -341,7 +227,7 @@
           </a>
         </div>
 
-        <div class="product" data-qa="card">
+        <div class="product product--5" data-qa="card">
           <img
             class="product__photo"
             src="images/imac.jpeg"
@@ -356,14 +242,139 @@
             Код товара: 195434
           </p>
 
-          <div class="stars stars--4 product__stars">
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
-            <span class="stars__star"></span>
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
 
-            <p class="stars__star-review stars__star-review--4">Отзывов: 5</p>
+            <p class="box-review">Отзывов: 5</p>
+          </div>
+
+          <div class="cost product__price">
+            <p class="cost__price-words">Цена:</p>
+            <p class="cost__price-number">69 999 грн</p>
+          </div>
+
+          <a
+            class="product__link"
+            href="#"
+            data-qa="hover"
+          >
+            Купить
+          </a>
+        </div>
+
+        <div class="product product--6" data-qa="card">
+          <img
+            class="product__photo"
+            src="images/imac.jpeg"
+            alt="imac photo"
+          >
+
+          <p class="product__text-title">
+            Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
+          </p>
+
+          <p class="product__text-subtitle">
+            Код товара: 195434
+          </p>
+
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
+
+            <p class="box-review">Отзывов: 5</p>
+          </div>
+
+          <div class="cost product__price">
+            <p class="cost__price-words">Цена:</p>
+            <p class="cost__price-number">69 999 грн</p>
+          </div>
+
+          <a
+            class="product__link"
+            href="#"
+            data-qa="hover"
+          >
+            Купить
+          </a>
+        </div>
+
+        <div class="product product--7" data-qa="card">
+          <img
+            class="product__photo"
+            src="images/imac.jpeg"
+            alt="imac photo"
+          >
+
+          <p class="product__text-title">
+            Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
+          </p>
+
+          <p class="product__text-subtitle">
+            Код товара: 195434
+          </p>
+
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
+
+            <p class="box-review">Отзывов: 5</p>
+          </div>
+
+          <div class="cost product__price">
+            <p class="cost__price-words">Цена:</p>
+            <p class="cost__price-number">69 999 грн</p>
+          </div>
+
+          <a
+            class="product__link"
+            href="#"
+            data-qa="hover"
+          >
+            Купить
+          </a>
+        </div>
+
+        <div class="product product--8" data-qa="card">
+          <img
+            class="product__photo"
+            src="images/imac.jpeg"
+            alt="imac photo"
+          >
+
+          <p class="product__text-title">
+            Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)
+          </p>
+
+          <p class="product__text-subtitle">
+            Код товара: 195434
+          </p>
+
+          <div class="box">
+            <div class="stars stars--4 box__stars">
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+              <span class="stars__star"></span>
+            </div>
+
+            <p class="box-review">Отзывов: 5</p>
           </div>
 
           <div class="cost product__price">
